# NetworkCloak

./: .clangd  README.md  TECHNICAL_GUIDE.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
lib/: main.dart
lib/app/: router.dart
lib/app/theme/: app_theme.dart
lib/data/database/: app_database.dart  app_database.g.dart
lib/data/fixtures/: blocklists.dart
lib/domain/entities/: alert.dart  application_info.dart  connection_record.dart  dns_log_entry.dart  dns_profile.dart  firewall_rule.dart  profile.dart  temporary_rule.dart  trusted_network.dart
lib/domain/enums/: dns_protocol.dart  network_trust_level.dart  protection_mode.dart  rule_action.dart  rule_priority.dart
lib/domain/usecases/firewall/: evaluate_rule_use_case.dart
lib/domain/usecases/shield/: classify_network_use_case.dart
lib/platform/: platform_channel_bridge.dart
lib/presentation/providers/: providers.dart
lib/presentation/screens/alerts/: alerts_screen.dart
lib/presentation/screens/dns_guard/: dns_guard_screen.dart
lib/presentation/screens/firewall/: firewall_screen.dart
lib/presentation/screens/home/: home_screen.dart
test/: widget_test.dart
test/domain/: classify_network_use_case_test.dart  evaluate_rule_use_case_test.dart  risk_heuristics_test.dart  throughput_test.dart
windows/: CMakeLists.txt
windows/network_cloak_service/: Cargo.toml
windows/network_cloak_service/src/: connection_monitor.rs  ipc_server.rs  main.rs  process_mapper.rs  wfp_adapter.rs
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
(+34 files in other folders)
